<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PayTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_time">Select Your Starting Time</string>
    <string name="calculate_pay">CALCULATE PAY</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="starting_time">Starting Time</string>
    <string name="finishing_time">Finishing Time</string>
    <string name="time_worked">Time Worked</string>
    <string name="time_left">Time Left</string>
    <string name="pay_so_far">Pay So Far</string>
    <string name="default_time">12:00 am</string>

</resources>
